--- a/Week-2/day5-classwork/whackamole.html
+++ b/Week-2/day5-classwork/whackamole.html
@@ -72,7 +72,7 @@
                 <label for="hard">hard</label>
             </div>
             <button class="but-start" id="start">Begin!</button>
-            <span id="clock"></span>
+            <span id="clock">Time remaining: 0</span>
         </main>
         <main class="flex-container">
             <div class="mole"></div>
