--- a/Week-2/day5-classwork/whackamole.html
+++ b/Week-2/day5-classwork/whackamole.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>mole</title>
         <style>
             div {
                 height: 100px;
@@ -35,6 +35,9 @@
                 padding: 5px;
                 cursor: pointer;
             }
+            .span-error {
+                color: red;
+            }
         </style>
     </head>
     <body>
@@ -58,7 +61,6 @@
                     value="medium"
                     name="difRad"
                 />
-
                 <label for="medium">medium</label>
             </div>
             <div class="div-radio">
