--- a/week2-project/sketchpad.html
+++ b/week2-project/sketchpad.html
@@ -5,6 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <style>
+            .conatiner-class {
+                width: 100%;
+                flex: auto;
+                flex-flow: wrap;
+                display: flex;
+                justify-content: space-evenly;
+                padding-bottom: 5px;
+            }
+        </style>
     </head>
     <body>
         <script src="./sketchpad.js"></script>
