--- a/week2-project/sketchpad.html
+++ b/week2-project/sketchpad.html
@@ -6,17 +6,63 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <style>
-            .conatiner-class {
+            * {
+                background-color: #95d9c3;
+            }
+            .container-class {
                 width: 100%;
+                height: 100%;
+                display: flex;
                 flex: auto;
                 flex-flow: wrap;
-                display: flex;
                 justify-content: space-evenly;
                 padding-bottom: 5px;
+                border: 1px solid black;
+                flex-basis: auto;
+            }
+            .canvas {
+                border: 1px solid black;
+                background-color: whitesmoke;
+                min-height: 250px;
+                flex-basis: auto;
+            }
+            .flexbasis25 {
+                flex-basis: 25%;
+            }
+            .flexbasis75 {
+                flex-basis: 75%;
             }
         </style>
     </head>
     <body>
+        <!-- main body -->
+        <div class="container-class">
+            <!-- canvas -->
+            <main class="container-class">
+                <canvas class="canvas flexbasis75"></canvas>
+                <!--color presets  -->
+                <aside class="container.class">
+                    <div class="flexbasis25">
+                        color preset left side
+                        <div>color 1</div>
+                        <div>color 2</div>
+                        <div>color 3</div>
+                    </div>
+                </aside>
+            </main>
+
+            <!-- color picker -->
+            <main class="container-class">
+                <div>
+                    color picker below canvas
+                    <div>color display</div>
+                    <div>red slider</div>
+                    <div>green slider</div>
+                    <div>blue slider</div>
+                </div>
+            </main>
+        </div>
+        <!-- end body start script -->
         <script src="./sketchpad.js"></script>
     </body>
 </html>
