clean up slider event listeners

--- a/week2-project/sketchpad.html
+++ b/week2-project/sketchpad.html
@@ -18,14 +18,17 @@
                     <div
                         class="border color-preset"
                         style="background-color: red"
+                        id="redOpt"
                     ></div>
                     <div
                         class="border color-preset"
                         style="background-color: green"
+                        id="greenOpt"
                     ></div>
                     <div
                         class="border color-preset"
                         style="background-color: blue"
+                        id="blueOpt"
                     ></div>
                 </aside>
             </main>
