focus not working

--- a/week2-project/sketchpad.html
+++ b/week2-project/sketchpad.html
@@ -9,38 +9,38 @@
     </head>
     <body>
         <!-- main body -->
-        <div class="border container-class">
+        <div class="container-class">
             <!-- canvas -->
-            <main class="border container-class">
-                <canvas class="border canvas flexbasis75" id="canvas"></canvas>
+            <main class="container-class">
+                <canvas class="canvas flexbasis75" id="canvas"></canvas>
                 <!--color presets  -->
-                <aside class="border container.class">
+                <aside class="container.class">
                     <div
-                        class="border color-preset"
+                        class="color-preset color-option"
                         style="background-color: red"
                         id="redOpt"
                     ></div>
                     <div
-                        class="border color-preset"
+                        class="color-preset color-option"
                         style="background-color: green"
                         id="greenOpt"
                     ></div>
                     <div
-                        class="border color-preset"
+                        class="color-preset color-option"
                         style="background-color: blue"
                         id="blueOpt"
                     ></div>
                 </aside>
             </main>
             <!-- color picker -->
-            <main class="border color-pick-containers">
-                <div class="border flexbasis75 color-pick-containers">
+            <main class="color-pick-containers">
+                <div class="flexbasis75 color-pick-containers">
                     <div
-                        class="border flexbasis25"
+                        class="flexbasis25 color-option"
                         style="background-color: rgb(128, 128, 128)"
                         id="color"
                     ></div>
-                    <div class="border slider-container flexbasis75">
+                    <div class="color-preset slider-container flexbasis75">
                         <input
                             type="range"
                             min="0"
