--- a/week2-project/sketchpad.html
+++ b/week2-project/sketchpad.html
@@ -11,7 +11,7 @@
         <!-- main body -->
         <div class="container-class">
             <!-- canvas -->
-            <main class="container-class">
+            <main class="container-class" id="canvasCont">
                 <canvas class="canvas flexbasis75" id="canvas"></canvas>
                 <!--color presets  -->
                 <aside class="container.class">
@@ -76,7 +76,8 @@
                     </div>
                 </div>
             </main>
-            <button id="addColor">add color</button>
+            <button id="addColor">Add Color</button>
+            <button id="clear">Clear</button>
         </div>
         <!-- end body start script -->
         <script src="./sketchpad.js"></script>
