--- a/Week-3/omdbApiCall/apiCallGroupProject.html
+++ b/Week-3/omdbApiCall/apiCallGroupProject.html
@@ -8,12 +8,7 @@
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     </head>
 
-    <!-- Sign up for a personal API key from OMDBAPi -->
     <!-- Utilize the information on the page to see what kind of format a request needs to be made in to return correct information. -->
-    <!-- Create a simple search box that allows for the user to search for a movie. They should be able to enter ANY of the following information but a search field is required for you to send a request to the API: -->
-    <!-- Search Field - Do not allow for an API call without at least 3 characters in this field -->
-    <!-- Type (Make a select box for this) -->
-    <!-- Year - Your choice of input type -->
     <!-- If an error occurred, let the user know. Otherwise display the data to the page. -->
     <!-- Since only 10 items are returned, figure out how many items WOULD have been sent and let the user know. -->
 
@@ -29,28 +24,47 @@
             <option value="game">Game</option>
         </select>
         <button id="search">Search</button>
+        <main></main>
 
         <script>
             //! Read API Documentation to see what format you will get a response in / what you need to send
-            //! Fetch data from the API
             //! Display error message to DOM if something went wrong
             //! Use data to display to DOM
             //
             document
                 .getElementById("search")
                 .addEventListener("click", async () => {
-                    var select = document.getElementById("type");
-                    var type = select.options[select.selectedIndex].value;
+                    let select = document.getElementById("type");
+                    let type = select.options[select.selectedIndex].value;
                     let year = document.getElementById("year").value;
                     let title = document.getElementById("title").value;
-                    console.log(type, year, title);
-                    let searchURL = `http://www.omdbapi.com/?apikey=26718b5b&type=${type}&y=${year}&s=${title}`;
-                    console.log(searchURL);
-                    try {
-                        const response = await axios.get(searchURL);
-                        console.log("Data:", response.data);
-                    } catch (error) {
-                        console.error(error);
+                    if (title.length < 3) {
+                        console.log("title to short");
+                    } else {
+                        // console.log(type, year, title);
+                        let searchURL = `http://www.omdbapi.com/?apikey=26718b5b&type=${type}&y=${year}&s=${title}`;
+                        // console.log(searchURL);
+                        try {
+                            const response = await axios.get(searchURL);
+                            console.log(response.data);
+                            const data = response.data;
+                            if (data.Response !== "True") {
+                                console.log(data.Error);
+                            } else {
+                                console.log("here we go..");
+
+                                data.Search.forEach((e) => {
+                                    let title = e.Title;
+                                    let year = e.Year;
+                                    let info = document.createElement("p");
+                                    let main = document.querySelector("main");
+                                    main.appendChild(info);
+                                    info.innerText = `${title} ${year}`;
+                                });
+                            }
+                        } catch (error) {
+                            console.error(error);
+                        }
                     }
                 });
         </script>
